--- a/sistema/Views/Pedidoes/Index.cshtml
+++ b/sistema/Views/Pedidoes/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Pedidos";
 }
 <h2>@ViewData["Title"]</h2>
-<h1>Index</h1>
+
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-outline-success" >Gerar Pedido</a>
 </p>
 <table class="table">
     <thead>
