--- a/sistema/Views/Pedidos/Index.cshtml
+++ b/sistema/Views/Pedidos/Index.cshtml
@@ -1,19 +1,26 @@
 ﻿@model IEnumerable<sistema.Models.Pedido>
 
 @{
-    ViewData["Title"] = "Pedidos";
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2>@ViewData["Title"]</h2>
 
+<h1>Index</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-outline-success" >Gerar Pedido</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Preco)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Quantidade)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Cliente)
             </th>
             <th></th>
         </tr>
@@ -23,6 +30,12 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Preco)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Quantidade)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cliente.Email)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
