--- a/sistema/Views/Shared/_Layout.cshtml
+++ b/sistema/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </li>*@
                         <li class="nav-item">
-                            <a class="btn btn-outline-success" asp-area="" asp-controller="Pedidoes" asp-action="Index">Pedidos</a>
+                            <a class="btn btn-outline-success" asp-area="" asp-controller="Pedidos" asp-action="Index">Pedidos</a>
                         </li>
                         <li class="nav-item">
                             <a class="btn btn-outline-primary" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
